--- a/settings.ini
+++ b/settings.ini
@@ -1,31 +1,26 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
-# For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
-# company_name = nike
+lib_name = fasthugs
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
-# copyright = Put your copyright information here
-branch = {branch}
+user = aikindergarten
+description = A description of your project
+keywords = transformers, fastai
+author = aikindergarten
+author_email = aruthart@gmail.com
+copyright = aikindergarten
+branch = master
 version = 0.0.1
 min_python = 3.6
-audience = Developers
+audience = DataScietists
 language = English
-# Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = False
-# Add licenses and see current list in `setup.py`
 license = apache2
 # From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
 status = 2
 
-# Optional. Same format as setuptools requirements
-# requirements = 
+# Same format as setuptools requirements
+requirements = torch>=1.7.1 fastai>=2.2.2 fastcore datasets
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
@@ -37,7 +32,7 @@ status = 2
 ###
 
 # Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
-nbs_path = .
+nbs_path = nbs
 doc_path = docs
 
 # Whether to look for library notebooks recursively in the `nbs_path` dir
@@ -66,7 +61,7 @@ title = %(lib_name)s
 #Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
 #monospace_docstrings = False
 #Test flags: introduce here the test flags you want to use separated by |
-#tst_flags = 
+tst_flags = slow|cuda
 #Custom sidebar: customize sidebar.json yourself for advanced sidebars (False/True)
 #custom_sidebar = 
 #Cell spacing: if you want cell blocks in code separated by more than one new line
