--- a/settings.ini
+++ b/settings.ini
@@ -20,7 +20,7 @@ license = apache2
 status = 2
 
 # Same format as setuptools requirements
-requirements = torch>=1.7.1 fastai>=2.2.2 fastcore datasets
+requirements = torch>=1.7.1 fastai>=2.2.2 fastcore
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
