--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -21,6 +21,9 @@ entries:
     - output: web,pdf
       title: Title
       url: examples.mlm-imdb.html
+    - output: web,pdf
+      title: GLUE Benchmark
+      url: examples.glue-benchmark.html
     output: web
     title: fasthugs
   output: web
