--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -17,7 +17,7 @@ entries:
       url: learner.html
     - output: web,pdf
       title: 'Text classification: IMDB dataset'
-      url: examples.classification-imdb.html
+      url: examples.machine_translation.html
     - output: web,pdf
       title: Masked Language Modeling
       url: examples.mlm-imdb.html
