--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -34,7 +34,7 @@ entries:
       title: 'Machine Translation: fr-en'
       url: examples.machine_translation.html
     - output: web,pdf
-      title: Abstractive summarization with T5
+      title: Summarization
       url: examples.summarization.html
     output: web
     title: fasthugs
