--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -16,6 +16,9 @@ entries:
       title: Learner for transformers
       url: learner.html
     - output: web,pdf
+      title: Metrics
+      url: metrics.html
+    - output: web,pdf
       title: 'Text classification: IMDB dataset'
       url: examples.classification-imdb.html
     - output: web,pdf
@@ -30,6 +33,9 @@ entries:
     - output: web,pdf
       title: 'Machine Translation: fr-en'
       url: examples.machine_translation.html
+    - output: web,pdf
+      title: Summarization
+      url: examples.summarization.html
     output: web
     title: fasthugs
   output: web
