--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -39,6 +39,9 @@ entries:
     - output: web,pdf
       title: Multiple Choice
       url: examples.multiple_choice.html
+    - output: web,pdf
+      title: Token Classification
+      url: examples.token_classification.html
     output: web
     title: fasthugs
   output: web
