--- a/settings.ini
+++ b/settings.ini
@@ -10,9 +10,9 @@ author = aikindergarten
 author_email = aruthart@gmail.com
 copyright = aikindergarten
 branch = master
-version = 0.0.1
+version = 0.0.2
 min_python = 3.6
-audience = DataScietists
+audience = Developers
 language = English
 custom_sidebar = False
 license = apache2
