--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ models/
 *.egg-info/
 .installed.cfg
 *.egg
+conda/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
